fixed images stuck as zoomed when quickly clicked, faster animation

--- a/styles/base.css
+++ b/styles/base.css
@@ -66,7 +66,7 @@ a {
 }
 
 img {
-	transition: width 0.5s;
+	transition: width 0.3s;
 }
 
 /* Title and links */
